Production ready: Added render.yaml, production configs, Flyway migrations, global exception handling, health check, and deployment guide